# jigsaw-geo-python

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  certify.py  example.py  jig_t.py  jigsaw.py  loadjig.py  loadmsh.py  msh_t.py  savejig.py  savemsh.py  setup.py
_ext_/jigsaw/src/: CMakeLists.txt  jig_read.hpp  msh_read.hpp
files/: aust.jig  aust.msh  ball.jig  ball.msh  hfun.msh  mask.vtk  mesh.msh  us48.jig
jigsawpy/: Geom.pxd  Geom.pyx  Hfun.pyx  Jigsaw.pxd  Jigsaw.pyx  Mesh.pxd  Mesh.pyx  __init__.py  certify.py  def_l.py  def_t.py  jig_l.py  jig_t.py  jigsaw.py  libsaw.py  loadjig.py  loadmsh.py  msh_l.py  msh_t.py  savejig.py  savemsh.py
jigsawpy/cjigsaw/: jigsaw_const.pxd  jigsaw_jig_t.pxd  jigsaw_msh_t.pxd  lib_jigsaw.pxd
jigsawpy/cjigsaw/tests/: __init__.py
jigsawpy/entrypoints/: _jigsaw.py
jigsawpy/geom/: _JigsawGeom2D.pxd  _JigsawGeom2D.pyx  _MeshBoundaries.py  __init__.py
tests/: case_1_.py  case_2_.py  case_3_.py  case_4_.py  case_5_.py  case_6_.py  case_7_.py  test_Jigsaw.py  test_cjigsaw.py  test_geom.py
tests/cjigsaw/: test_1.pyx  test_2.pyx  test_3.pyx  test_4.pyx  test_5.pyx  test_6.pyx
xtern/jigsaw/src/: jig_read.hpp
